maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:5: error: illegal start of simple expression
      var a:Int= random3();
      ^